# blockchain-federation-cn5g

./: README.md  README_docker.md
oai-cn5g-fed/charts/e2e_scenarios/case1/: values.yaml
oai-cn5g-fed/charts/oai-5g-core/oai-5g-basic/: values.yaml
oai-cn5g-fed/charts/oai-5g-ran/oai-nr-ue/: values.yaml
oai-cn5g-fed/component/oai-lmf/: .devcontainer.json  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md
oai-cn5g-fed/component/oai-lmf/3gpp_specs/: TS29502_Nsmf_PDUSession.yaml  TS29507_Npcf_AMPolicyControl.yaml  config.json
oai-cn5g-fed/component/oai-lmf/ci-scripts/: Jenkinsfile-GitLab-Docker  flatten_image.py  generateHtmlReport.py  sanityCheckDeploy.py
oai-cn5g-fed/component/oai-lmf/docker/: Dockerfile.lmf.rhel9  Dockerfile.lmf.rocky9  Dockerfile.lmf.ubuntu
oai-cn5g-fed/component/oai-lmf/docs/: FEATURE_SET.md
oai-cn5g-fed/component/oai-lmf/etc/: config.yaml  lmf.conf
oai-cn5g-fed/component/oai-lmf/openshift/: build-config.yaml
oai-cn5g-fed/component/oai-lmf/scripts/: entrypoint.py  healthcheck.sh
oai-cn5g-fed/component/oai-lmf/src/: CODEOWNERS  clang-format.sh
oai-cn5g-fed/component/oai-lmf/src/lmf_app/: CMakeLists.txt  lmf_app.cpp  lmf_app.hpp  lmf_cause_error.hpp  lmf_config.cpp  lmf_config.hpp  lmf_config_yaml.cpp  lmf_config_yaml.hpp  lmf_event.cpp  lmf_event.hpp  lmf_event_sig.hpp  lmf_gnb.hpp  lmf_location_determination.cpp  lmf_location_determination.hpp  lmf_n1_n2_message_subscription.cpp  lmf_n1_n2_message_subscription.hpp  lmf_non_ue_n2_message_subscription.cpp  lmf_non_ue_n2_message_subscription.hpp  lmf_nrf.cpp  lmf_nrf.hpp  lmf_profile.cpp  lmf_profile.hpp  lmf_trp.hpp  task_manager.cpp  task_manager.hpp
oai-cn5g-fed/component/oai-lmf/src/nrppa/: AbortTransmission.c  AbortTransmission.h  ActivationTime.c  ActivationTime.h  ActiveULBWP.c  ActiveULBWP.h  AdditionalPathList.c  AdditionalPathList.h  AdditionalPathListItem.c  AdditionalPathListItem.h  AperiodicSRS.c  AperiodicSRS.h  AperiodicSRSResourceTrigger.c  AperiodicSRSResourceTrigger.h  AperiodicSRSResourceTriggerList.c  AperiodicSRSResourceTriggerList.h  Assistance-Information.c  Assistance-Information.h  AssistanceInformationControl.c  AssistanceInformationControl.h  AssistanceInformationFailureList.c  AssistanceInformationFailureList.h  AssistanceInformationFeedback.c  AssistanceInformationFeedback.h  AssistanceInformationMetaData.c  AssistanceInformationMetaData.h  BCCH.c  BCCH.h  BSSID.c  BSSID.h  BandwidthSRS.c  BandwidthSRS.h  Broadcast.c  Broadcast.h  BroadcastPeriodicity.c  BroadcastPeriodicity.h  CGI-EUTRA.c  CGI-EUTRA.h  CGI-NR.c  CGI-NR.h  (+599 more)
oai-cn5g-fed/component/oai-udr/: CHANGELOG.md
oai-cn5g-fed/docker-compose/: core-network-vm1.py  core-network-vm2.py  core-network.py  docker-compose-basic-nrf-vm1.yaml  docker-compose-basic-nrf-vm2.yaml  docker-compose-basic-vpp-nrf-domain1.yaml  docker-compose-basic-vpp-nrf-domain2.yaml  docker-compose-ueransim-vpp-domain1.yaml  docker-compose-ueransim-vpp-domain2.yaml
oai-cn5g-fed/docker-compose/conf/: basic_vpp_nrf_config.yaml
oai-cn5g-fed/docker-compose/vm2-conf/: nssf_slice_config.yaml
utils/: README.md  remove_vxlan_setup_multi_hosts.sh  vxlan_setup_hosts.sh  vxlan_setup_multi_hosts.sh
(+1778 files in other folders)
